kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: apolloio
  name: apolloio
spec:
  selector:
    app: apolloio
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
